style.css
/* ... */
.entry h3 {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 0.4rem;
    align-items: center;
}

.copyData {
    width: fit-content;
    padding: 0.2rem 0.4rem;
}

.copyData strong {
    pointer-events: none;
}

pre code:hover,
.copyData:hover {
    cursor: pointer;
    border-color: var(--fontColor);
}

pre code::after,
.copyData::after {
    content: "\e14d";
    font-family: "Material Icons";
    padding-left: 0.5rem;
    opacity: 0.5;
    transition: var(--transitionFast);
}

pre code:hover::after,
.copyData:hover::after {
    opacity: 1;
}

@keyframes copied-animation {
    5% {
        background: var(--highlightHover);
    }
}

.copied {
    animation: copied-animation 1s ease-in-out;
}

ol li {
    list-style: decimal;
}

li.active {
    font-weight: bold;
    color: var(--highlightActive);
    pointer-events: none;
}

li.active a {
    color: var(--highlightActive);
}

h1,
h2 {
    font-size: var(--fontSizeExtraLarge);
    text-align: left;
}

h3,
h4 {
    font-size: var(--fontSizeLarge);
    text-align: left;
}

h5,
h6 {
    font-size: var(--fontSizeMedium);
    text-align: left;
}

h1,
h3,
h5 {
    font-weight: bold;
}

#content h2,
#content h3,
#content h4,
#content h5,
#content h6 {
    margin-top: 1rem;
    width: 100%;
}

#content .pageRow.centered h3,
h2#birdhouseStructure {
    margin: unset;
}

@media screen and (max-width: 380px) {

    .mainHeading h1,
    h3 {
        text-align: center;
    }

    .mainHeading h3 {
        opacity: 0.5;
    }
}

a {
    color: var(--highlight);
    text-decoration: none;
    transition: var(--transitionFast);
    position: relative;
}

p a,
a.commit {
    padding: 0.2rem;
    margin: -0.2rem;
}

span a::after,
p a::after,
.pageColumn.entry p a::after,
.pageColumn.entry li a::after {
    content: "\e89e";
    font-family: "Material Icons";
    padding-left: 0.1rem;
    display: inline-block;
    transform: translateY(0.1rem);
}

a:hover {
    color: var(--highlightHover);
}

a:active {
    color: var(--highlightActive);
}

a h3 {
    pointer-events: none;
}

p.justify {
    text-align: justify;
    word-break: break-word;
}

p.filePath {
    font-size: var(--fontSizeMedium);
    word-break: break-all;
    align-self: flex-start;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
}

strong {
    font-weight: bold;
}

input,
textarea {
    color: var(--background);
    box-sizing: border-box;
    background: var(--muchlighter);
    border-radius: var(--borderRadiusButtons);
    border: none;
    resize: none;
    overflow-y: hidden;
    transition: var(--transitionFast);
    width: 100%;
    padding: var(--padding);
}

input::placeholder,
textarea::placeholder {
    color: var(--muchDarker);
}

.error-message {
    color: var(--warning);
    font-size: var(--fontSizeSmall);
    max-height: 0;
    overflow: hidden;
    transition: max-height var(--transitionFast);
}

.popup {
    background: var(--darker);
    transition: var(--transitionFast);
}

.popup-content {
    display: flex;
    flex-direction: column;
    gap: var(--padding);
    align-items: center;
    background: var(--accent);
    width: 30rem;
    max-width: 90%;
    max-height: 90%;
    padding: var(--padding);
    text-align: center;
    border-radius: var(--borderRadius);
    box-shadow: var(--boxShadow);
    word-break: break-word;
}

.popup-content h2,
.versionInfo,
#updateNotesButtonsContainer {
    width: 100%;
    text-align: center;
    flex-wrap: wrap;
    justify-content: center;
}

#searchPopup .popup-content {
    min-height: 100%;
    min-width: 100%;
    background: var(--background);
}

mark {
    background: var(--searchHighlight);
    color: var(--fontColor);
}

label {
    width: 100%;
    max-width: 40rem;
}

#searchInput {
    background: var(--muchlighter);
    border: var(--onePixelRem) solid var(--darker);
    color: var(--fontColor);
    font-size: var(--fontSizeMedium);
    border-radius: var(--borderRadius);
}

#searchResults {
    display: flex;
    flex-direction: column;
    gap: var(--padding);
}

#searchResults .hits {
    color: var(--muchDarker);
    font-size: var(--fontSizeSmall);
}

#searchResults .linkRow {
    display: flex;
    flex-direction: row;
    align-items: flex-end;
    justify-content: space-between;
}

.searchResult {
    width: 100%;
    max-width: 40rem;
    background-color: var(--accent);
    padding: var(--padding);
    display: flex;
    flex-direction: column;
    gap: var(--padding);
    box-sizing: border-box;
}

.searchResult .menuButton {
    align-self: flex-end;
}

.search-highlight {
    background: var(--searchHighlight);
    color: var(--fontColor);
    pointer-events: none;
    animation: fade-in-highlight 0.4s ease-out;
}

@keyframes fade-in-highlight {
    0% {
        background: var(--none);
    }

    100% {
        background: var(--searchHighlight);
    }
}

a.viewSearchLink {
    padding-right: 0.1rem;
}

.fade-in-fast {
    animation-name: fade-in-fast;
    animation-duration: 0.2s;
    animation-fill-mode: forwards;
    animation-timing-function: ease-in-out;
    animation-iteration-count: 1;
}

@keyframes fade-in-fast {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.fade-out-fast {
    animation-name: fade-out-fast;
    animation-duration: 0.2s;
    animation-fill-mode: forwards;
    animation-timing-function: ease-in-out;
    animation-iteration-count: 1;
}

@keyframes fade-out-fast {
    0% {
        opacity: 1;
    }

    100% {
        opacity: 0;
    }
}

img.logo {
    max-height: 2.4rem;
    max-width: 2.4rem;
    aspect-ratio: 1 / 1;
}

img.logo.big {
    max-height: 6rem;
    max-width: 6rem;

}

img.logo {
    filter: invert(1);
}
/* ... */

